<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_restore_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_profile"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/forgotPasswordEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/forgotPasswordSendLinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shapes"
        android:layout_marginTop="20dp"
        app:icon="@drawable/baseline_email_24"
        app:iconGravity="textStart"
        android:text="@string/send_link_to_email"/>
</LinearLayout>