<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="25dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_lock_reset_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/existPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password"/>

    <EditText
        android:id="@+id/updatePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_new_password"/>

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shapes"
        android:layout_marginTop="20dp"
        app:icon="@drawable/baseline_refresh_24"
        app:iconGravity="textStart"
        android:text="@string/update_password"/>

</LinearLayout>