<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:layout_gravity="center"
    android:padding="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/baseline_image_24"
        app:flow_horizontalAlign="center"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Email"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <EditText
        android:id="@+id/linkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:hint="@string/enter_link"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"/>

    <Button
        android:id="@+id/changePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        app:icon="@drawable/baseline_add_photo_alternate_24"
        app:iconGravity="textStart"
        android:background="@drawable/btn_shapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkEditText"/>

    <Button
        android:id="@+id/profileUpdatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        app:icon="@drawable/baseline_lock_reset_24"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_shapes"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/signOutButton"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:icon="@drawable/baseline_exit_to_app_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_shapes"/>

</androidx.constraintlayout.widget.ConstraintLayout>